Update public/index.html, public/style.css files

--- a/public/style.css
+++ b/public/style.css
@@ -1,24 +1,64 @@
 body {
   font-family: sans-serif;
-  margin: auto;
-  max-width: 1280px;
+  margin: 0;
+  font-size: 14px;
+}
+a, a:hover {text-decoration: none; color: inherit;}
+img  {
+  max-height: 100%;
+  max-width: 100%;
+  border: 0;
 }
 
-.navbar {
-  background-color: #313236;
-  border-radius: 2px;
-  max-width: 800px;
-}
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 
-.navbar a {
-  color: #aaa;
+}
+.pull-left  {float: left;}
+.pull-right {float: right;}
+.container {
+  max-width: 1024px;
+  width: 100%;
+  margin: 0 auto;
+}
+.header {
+  width: 100%;
   display: inline-block;
-  font-size: 15px;
-  padding: 10px;
-  text-decoration: none;
+  height: 3rem;
+  background-color:#043864e0;
+  padding: 0.5rem 0;
 }
-
-.navbar a:hover {
-  color: #ffffff;
+.header .logo {
+  height: 2rem;
 }
-
+.menu-top {
+  margin: 0;
+  padding: 0;
+}
+.menu-top li {
+  list-style: none;
+  float: left;
+  line-height: 2rem;
+}
+.menu-top li a {
+  padding: 0 15px;
+  color: #bebebe;
+}
+.content {
+  min-height: 80vh;
+}
+.content .photo {
+  width: 50%;
+  float: left;
+}
+.content .info {
+  margin-left: 51%;
+}
+.footer {
+  display: inline-block;
+  width: 100%;
+  background-color: #043864e0;
+  text-align: center;
+}
